# pymongoose

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: RELEASE.md
.github/workflows/: build-wheels.yml  test-wheels.yml
benchmarks/: QUICKSTART.md  README.md  RESULTS.md  SUMMARY.md  demo_server.py  quick_bench.py  run_benchmark.py  simple_benchmark.py  simple_load_test.py  test_cleanup.py  test_direct.py  test_sigint.py  test_signal_handler.py
benchmarks/servers/: aiohttp_server.py  flask_server.py  pymongoose_server.py  uvicorn_server.py
docs/: api-analysis.md  changelog.rst  cleanup_and_shutdown.md  code_nogil_review.md  conf.py  connection_drain.md  ctrl_c_workaround.md  examples.rst  index.rst  installation.rst  mg_http_delete_chunk.md  nogil_optimization_summary.md  poll_timeout_guide.md  quickstart.rst  security.md  shutdown_best_practices.md
docs/advanced/: nogil.rst  performance.rst  shutdown.rst  threading.rst  troubleshooting.rst
docs/api/: connection.rst  index.rst  manager.rst  messages.rst  utilities.rst
docs/dev/: api-analysis.md  cleanup_and_shutdown.md  code_nogil_review.md  connection_drain.md  contributing.rst  index.rst  mg_http_delete_chunk.md  shutdown_best_practices.md
docs/guide/: http.rst  index.rst  mqtt.rst  network.rst  tls.rst  websocket.rst
src/pymongoose/: __init__.py  _mongoose.c  _mongoose.pyi  _mongoose.pyx  mongoose.pxd
tests/: README.md  __init__.py  conftest.py  test_basic_auth.py  test_buffer_access.py  test_connection.py  test_connection_state.py  test_constants.py  test_dns.py  test_drain.py  test_flow_control.py  test_http_chunked.py  test_http_parsing.py  test_http_server.py  test_http_sse.py  test_json.py  test_lowlevel.py  test_mqtt_advanced.py  test_multipart.py  test_sntp.py  test_timer.py  test_tls.py  test_url_encode.py  test_wakeup.py  test_websocket.py
tests/benchmarks/: demo_server.py  manual_benchmark.md  quick_bench.py  quickstart.md  results.md  run_benchmark.py  simple_benchmark.py  simple_load_test.py  test_cleanup.py  test_direct.py  test_sigint.py  test_signal_handler.py
tests/benchmarks/servers/: aiohttp_server.py  flask_server.py  pymongoose_server.py  uvicorn_server.py
tests/examples/: README.md  test_examples_advanced.py  test_examples_http.py  test_examples_http_client.py  test_examples_http_server.py  test_examples_http_server_static_files.py  test_examples_importable.py  test_examples_mqtt_client_server.py  test_examples_protocols.py  test_examples_websocket_broadcast.py  test_examples_websocket_server.py  test_http_client_comprehensive.py  test_http_server.py  test_http_server_comprehensive.py  test_mqtt_client_server_comprehensive.py  test_priority3_comprehensive.py  test_priority4_comprehensive.py  test_priority5_comprehensive.py  test_readme_example.py  test_websocket_broadcast_comprehensive.py  test_websocket_server_comprehensive.py
tests/examples/advanced/: http_proxy_client.py  multithreaded_server.py  tls_https_server.py
tests/examples/http/: graceful-shutdown-drain.py  graceful-shutdown.py  http_client.py  http_file_upload.py  http_restful_server.py  http_server.py  http_sse_server.py  http_streaming_client.py
tests/examples/mqtt/: mqtt_client.py  mqtt_server.py
tests/examples/network/: dns_client.py  sntp_client.py  tcp_echo_server.py  udp_echo_server.py
tests/examples/web_root/: index.html  upload.html
tests/examples/websocket/: websocket_broadcast.py  websocket_server.py
