[project]
name = "pymongoose"
version = "0.1.3"
description = "Python port of Mongoose: embedded server"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mongoose Contributors"}
]
keywords = ["mongoose", "embedded", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.0",
    "fastapi>=0.118.1",
    "flask>=3.1.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "uvicorn>=0.37.0",
    "websocket-client>=1.9.0",
]

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython>=3.0.0; platform_python_implementation=='CPython'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymongoose"]
include-package-data = false

[tool.setuptools.package-dir]
pymongoose = "src/pymongoose"

[tool.setuptools.package-data]
pymongoose = ["*.pxd", "*.pyx"]


[project.urls]
Homepage = "https://github.com/shakfu/pymongoose"
Repository = "https://github.com/shakfu/pymongoose"
Documentation = "https://github.com/shakfu/pymongoose"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["pymongoose"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
