[project]
name = "pymongoose"
version = "0.1.4"
description = "High-performance Python bindings for Mongoose embedded networking library"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Mongoose Contributors"}
]
keywords = [
    "mongoose",
    "networking",
    "http",
    "https",
    "websocket",
    "mqtt",
    "server",
    "client",
    "embedded",
    "async",
    "high-performance",
    "tls",
    "ssl",
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",

    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",

    # Natural Language
    "Natural Language :: English",

    # Operating Systems
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    # Programming Languages
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",

    # Topics
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",

    # Typing
    "Typing :: Typed",
]

dependencies = []

[dependency-groups]
dev = [
    "aiohttp>=3.13.0",
    "fastapi>=0.118.1",
    "flask>=3.1.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "uvicorn>=0.37.0",
    "websocket-client>=1.9.0",
]

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython>=3.0.0; platform_python_implementation=='CPython'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymongoose"]
include-package-data = false

# [tool.setuptools.package-dir]
# pymongoose = "src/pymongoose"

# [tool.setuptools.package-data]
# pymongoose = ["*.pxd", "*.pyx"]


[project.urls]
Homepage = "https://github.com/shakfu/pymongoose"
Repository = "https://github.com/shakfu/pymongoose"
Documentation = "https://github.com/shakfu/pymongoose"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["pymongoose"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
